<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:layout_height="match_parent">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_title_label" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/todo_title"
        android:hint="@string/todo_title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_details_label" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/todo_details"
        android:hint="@string/todo_details_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_cat_label" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/todo_cat"
        android:hint="@string/todo_cat_hint"/>

    <Button
        android:id="@+id/todo_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <CheckBox
        android:id="@+id/todo_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_solved_label" />

    <Button
        android:id="@+id/todo_collab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_collab_text"
        />

    <Button
        android:id="@+id/todo_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_add_text"
    />

</LinearLayout>